--- a/package.json
+++ b/package.json
@@ -187,8 +187,12 @@
 	},
 	"dependencies": {
 		"axios": "^0.21.1",
+		"execa": "^5.0.0",
 		"fs-extra": "^9.0.1",
-		"markdown-it": "^12.0.4"
+		"markdown-it": "^12.0.4",
+		"puppeteer": "^8.0.0",
+		"query-string": "^7.0.0",
+		"tempy": "^1.0.1"
 	},
 	"husky": {
 		"hooks": {
